Fixed horizontal overflow in FileUploader on mobile

--- a/src/components/ExampleSpreadsheet/ExampleSpreadsheet.scss
+++ b/src/components/ExampleSpreadsheet/ExampleSpreadsheet.scss
@@ -1,6 +1,8 @@
 @import "main";
 
 .ExampleSpreadsheet {
+  overflow-x: auto;
+
   & thead {
     & tr {
       & td {
